src/parser.output
Terminals unused in grammar

    ENTAO


State 13 conflicts: 10 shift/reduce
State 20 conflicts: 2 shift/reduce
State 39 conflicts: 1 shift/reduce
State 85 conflicts: 1 shift/reduce
State 86 conflicts: 1 shift/reduce
State 162 conflicts: 2 reduce/reduce
State 184 conflicts: 2 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: ε
    2         | programa bloco

    3 bloco: instrucao
    4      | bloco instrucao

    5 instrucao: ato
    6          | cena
    7          | dialogo
    8          | declaracao
    9          | declaracaoCenario
   10          | declaracaoQuestionamento
   11          | concatenarCenario
   12          | substituiCenario
   13          | trocarCenario
   14          | alteracaoElenco
   15          | if_sentenca
   16          | if_bloco
   17          | while
   18          | personagensEntrando

   19 declaracaoCenario: ABRE_PARENTESES texto VIRGULA texto FECHA_PARENTESES

   20 concatenarCenario: ADICIONAR_CENARIO INICIO texto FIM

   21 substituiCenario: SUBSTITUIR_CENARIO texto POR texto NO_CENARIO FIM

   22 trocarCenario: inicioDialogo VOLTAR_CENARIO ARTIGO texto FIM

   23 declaracaoQuestionamento: texto INTERROGACAO NAO FIM
   24                         | texto INTERROGACAO SIM FIM
   25                         | texto INTERROGACAO

   26 texto: palavra
   27      | texto NUMERO
   28      | texto palavra

   29 palavra: TOKEN

   30 adjetivos: ADJETIVO_POSITIVO
   31          | ADJETIVO_NEGATIVO
   32          | TOKEN
   33          | adjetivos ADJETIVO_POSITIVO
   34          | adjetivos ADJETIVO_NEGATIVO
   35          | adjetivos TOKEN
   36          | adjetivos ENTRE

   37 declaracao: declaracaoInicio texto FIM

   38 declaracaoInicio: texto VIRGULA

   39 personagensEntrando: texto
   40                    | personagensEntrando VIRGULA texto
   41                    | personagensEntrando E texto

   42 personagensSaindo: texto
   43                  | personagensSaindo VIRGULA texto
   44                  | personagensSaindo E texto

   45 alteracaoElenco: ABRE_COLCHETES ENTRAM personagensEntrando FECHA_COLCHETES
   46                | ABRE_COLCHETES SAEM personagensSaindo FECHA_COLCHETES
   47                | ABRE_COLCHETES TODOS SAEM FECHA_COLCHETES

   48 personagem: EU
   49           | VOCE
   50           | texto

   51 valor: NUMERO
   52      | TU MESMO
   53      | EU
   54      | VOCE
   55      | texto

   56 expressao: valor
   57          | ARTIGO SOMAR ENTRE valor E valor
   58          | ARTIGO SUBTRAIR ENTRE valor E valor
   59          | ARTIGO MULTIPLICAR ENTRE valor E valor
   60          | ARTIGO DIVIDIR ENTRE valor E valor

   61 if_sentenca: SE condicao VIRGULA personagem SERA expressao
   62            | SE condicao VIRGULA personagem IF_MOSTRA_VALOR
   63            | SE condicao VIRGULA personagem IF_LE_VALOR

   64 $@1: ε

   65 if_bloco: SE condicao VIRGULA texto INICIO $@1 bloco ENDIF

   66 $@2: ε

   67 while: ENQUANTO_COMECO condicao VIRGULA texto INICIO $@2 bloco texto ENQUANTO_FIM FIM

   68 $@3: ε

   69 while: FACA VIRGULA texto INICIO $@3 bloco ENQUANTO_COMECO condicao VIRGULA texto FIM

   70 condicao: expressao FOR MAIOR expressao
   71         | expressao FOR MENOR expressao
   72         | expressao FOR IGUAL expressao
   73         | expressao NAO FOR MENOR expressao
   74         | expressao NAO FOR MAIOR expressao
   75         | expressao NAO FOR IGUAL expressao

   76 dialogo: inicioDialogo MOSTRAR_CENARIO
   77        | inicioDialogo if_sentenca FIM
   78        | inicioDialogo texto FIM
   79        | inicioDialogo texto VIRGULA TU EH expressao FIM
   80        | inicioDialogo texto VIRGULA TU EH adjetivos FIM
   81        | inicioDialogo texto VIRGULA MOSTRA_VALOR FIM
   82        | inicioDialogo texto VIRGULA LE_VALOR FIM
   83        | inicioDialogo texto VIRGULA GUARDE texto INTERIOR FIM
   84        | inicioDialogo texto VIRGULA LEMBRE texto FIM

   85 inicioDialogo: texto INICIO

   86 ato: ATO

   87 cena: CENA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    FACA <texto> (258) 69
    ENDIF <texto> (259) 65
    ENQUANTO_COMECO <texto> (260) 67 69
    ENQUANTO_FIM <texto> (261) 67
    MAIOR <texto> (262) 70 74
    MENOR <texto> (263) 71 73
    IGUAL <texto> (264) 72 75
    NAO <texto> (265) 23 73 74 75
    FOR <texto> (266) 70 71 72 73 74 75
    ENTAO <texto> (267)
    EU <texto> (268) 48 53
    SE <texto> (269) 61 62 63 65
    SAEM <texto> (270) 46 47
    ENTRAM <texto> (271) 45
    TODOS <texto> (272) 47
    SOMAR <texto> (273) 57
    SUBTRAIR <texto> (274) 58
    DIVIDIR <texto> (275) 60
    MULTIPLICAR <texto> (276) 59
    INICIO <texto> (277) 20 65 67 69 85
    FIM <texto> (278) 20 21 22 23 24 37 67 69 77 78 79 80 81 82 83 84
    SIM <texto> (279) 24
    INTERROGACAO <texto> (280) 23 24 25
    ABRE_COLCHETES <texto> (281) 45 46 47
    FECHA_COLCHETES <texto> (282) 45 46 47
    VOLTAR_CENARIO <texto> (283) 22
    VOCE <texto> (284) 49 54
    ABRE_PARENTESES <texto> (285) 19
    FECHA_PARENTESES <texto> (286) 19
    VIRGULA <texto> (287) 19 38 40 43 61 62 63 65 67 69 79 80 81 82 83 84
    SERA <texto> (288) 61
    TOKEN <texto> (289) 29 32 35
    ADJETIVO_POSITIVO <texto> (290) 30 33
    ADJETIVO_NEGATIVO <texto> (291) 31 34
    TU <texto> (292) 52 79 80
    EH <texto> (293) 79 80
    E <texto> (294) 41 44 57 58 59 60
    ENTRE <texto> (295) 36 57 58 59 60
    ARTIGO <texto> (296) 22 57 58 59 60
    MESMO <texto> (297) 52
    NUMERO <texto> (298) 27 51
    ADICIONAR_CENARIO <texto> (299) 20
    SUBSTITUIR_CENARIO <texto> (300) 21
    POR <texto> (301) 21
    NO_CENARIO <texto> (302) 21
    MOSTRAR_CENARIO <texto> (303) 76
    MOSTRA_VALOR <texto> (304) 81
    LE_VALOR <texto> (305) 82
    GUARDE <texto> (306) 83
    INTERIOR <texto> (307) 83
    LEMBRE <texto> (308) 84
    IF_MOSTRA_VALOR <text> (309) 62
    IF_LE_VALOR <text> (310) 63
    ATO <inteiro> (311) 86
    CENA <inteiro> (312) 87


Nonterminals, with rules where they appear

    $accept (58)
        on left: 0
    programa (59)
        on left: 1 2
        on right: 0 2
    bloco <texto> (60)
        on left: 3 4
        on right: 2 4 65 67 69
    instrucao (61)
        on left: 5 6 7 8 9 10 11 12 13 14 15 16 17 18
        on right: 3 4
    declaracaoCenario (62)
        on left: 19
        on right: 9
    concatenarCenario (63)
        on left: 20
        on right: 11
    substituiCenario (64)
        on left: 21
        on right: 12
    trocarCenario (65)
        on left: 22
        on right: 13
    declaracaoQuestionamento (66)
        on left: 23 24 25
        on right: 10
    texto <texto> (67)
        on left: 26 27 28
        on right: 19 20 21 22 23 24 25 27 28 37 38 39 40 41 42 43 44 50 55 65 67 69 78 79 80 81 82 83 84 85
    palavra <texto> (68)
        on left: 29
        on right: 26 28
    adjetivos <inteiro> (69)
        on left: 30 31 32 33 34 35 36
        on right: 33 34 35 36 80
    declaracao <texto> (70)
        on left: 37
        on right: 8
    declaracaoInicio <texto> (71)
        on left: 38
        on right: 37
    personagensEntrando (72)
        on left: 39 40 41
        on right: 18 40 41 45
    personagensSaindo (73)
        on left: 42 43 44
        on right: 43 44 46
    alteracaoElenco (74)
        on left: 45 46 47
        on right: 14
    personagem <texto> (75)
        on left: 48 49 50
        on right: 61 62 63
    valor <llmValueRef> (76)
        on left: 51 52 53 54 55
        on right: 56 57 58 59 60
    expressao <llmValueRef> (77)
        on left: 56 57 58 59 60
        on right: 61 70 71 72 73 74 75 79
    if_sentenca <inteiro> (78)
        on left: 61 62 63
        on right: 15 77
    if_bloco (79)
        on left: 65
        on right: 16
    $@1 (80)
        on left: 64
        on right: 65
    while <inteiro> (81)
        on left: 67 69
        on right: 17
    $@2 (82)
        on left: 66
        on right: 67
    $@3 (83)
        on left: 68
        on right: 69
    condicao <llmValueRef> (84)
        on left: 70 71 72 73 74 75
        on right: 61 62 63 65 67 69
    dialogo <texto> (85)
        on left: 76 77 78 79 80 81 82 83 84
        on right: 7
    inicioDialogo <texto> (86)
        on left: 85
        on right: 22 76 77 78 79 80 81 82 83 84
    ato <texto> (87)
        on left: 86
        on right: 5
    cena <texto> (88)
        on left: 87
        on right: 6


State 0

    0 $accept: • programa $end

    $default  reduce using rule 1 (programa)

    programa  go to state 1


State 1

    0 $accept: programa • $end
    2 programa: programa • bloco

    $end                shift, and go to state 2
    FACA                shift, and go to state 3
    ENQUANTO_COMECO     shift, and go to state 4
    SE                  shift, and go to state 5
    ABRE_COLCHETES      shift, and go to state 6
    ABRE_PARENTESES     shift, and go to state 7
    TOKEN               shift, and go to state 8
    ADICIONAR_CENARIO   shift, and go to state 9
    SUBSTITUIR_CENARIO  shift, and go to state 10
    ATO                 shift, and go to state 11
    CENA                shift, and go to state 12

    bloco                     go to state 13
    instrucao                 go to state 14
    declaracaoCenario         go to state 15
    concatenarCenario         go to state 16
    substituiCenario          go to state 17
    trocarCenario             go to state 18
    declaracaoQuestionamento  go to state 19
    texto                     go to state 20
    palavra                   go to state 21
    declaracao                go to state 22
    declaracaoInicio          go to state 23
    personagensEntrando       go to state 24
    alteracaoElenco           go to state 25
    if_sentenca               go to state 26
    if_bloco                  go to state 27
    while                     go to state 28
    dialogo                   go to state 29
    inicioDialogo             go to state 30
    ato                       go to state 31
    cena                      go to state 32


State 2

    0 $accept: programa $end •

    $default  accept


State 3

   69 while: FACA • VIRGULA texto INICIO $@3 bloco ENQUANTO_COMECO condicao VIRGULA texto FIM

    VIRGULA  shift, and go to state 33


State 4

   67 while: ENQUANTO_COMECO • condicao VIRGULA texto INICIO $@2 bloco texto ENQUANTO_FIM FIM

    EU      shift, and go to state 34
    VOCE    shift, and go to state 35
    TOKEN   shift, and go to state 8
    TU      shift, and go to state 36
    ARTIGO  shift, and go to state 37
    NUMERO  shift, and go to state 38

    texto      go to state 39
    palavra    go to state 21
    valor      go to state 40
    expressao  go to state 41
    condicao   go to state 42


State 5

   61 if_sentenca: SE • condicao VIRGULA personagem SERA expressao
   62            | SE • condicao VIRGULA personagem IF_MOSTRA_VALOR
   63            | SE • condicao VIRGULA personagem IF_LE_VALOR
   65 if_bloco: SE • condicao VIRGULA texto INICIO $@1 bloco ENDIF

    EU      shift, and go to state 34
    VOCE    shift, and go to state 35
    TOKEN   shift, and go to state 8
    TU      shift, and go to state 36
    ARTIGO  shift, and go to state 37
    NUMERO  shift, and go to state 38

    texto      go to state 39
    palavra    go to state 21
    valor      go to state 40
    expressao  go to state 41
    condicao   go to state 43


State 6

   45 alteracaoElenco: ABRE_COLCHETES • ENTRAM personagensEntrando FECHA_COLCHETES
   46                | ABRE_COLCHETES • SAEM personagensSaindo FECHA_COLCHETES
   47                | ABRE_COLCHETES • TODOS SAEM FECHA_COLCHETES

    SAEM    shift, and go to state 44
    ENTRAM  shift, and go to state 45
    TODOS   shift, and go to state 46


State 7

   19 declaracaoCenario: ABRE_PARENTESES • texto VIRGULA texto FECHA_PARENTESES

    TOKEN  shift, and go to state 8

    texto    go to state 47
    palavra  go to state 21


State 8

   29 palavra: TOKEN •

    $default  reduce using rule 29 (palavra)


State 9

   20 concatenarCenario: ADICIONAR_CENARIO • INICIO texto FIM

    INICIO  shift, and go to state 48


State 10

   21 substituiCenario: SUBSTITUIR_CENARIO • texto POR texto NO_CENARIO FIM

    TOKEN  shift, and go to state 8

    texto    go to state 49
    palavra  go to state 21


State 11

   86 ato: ATO •

    $default  reduce using rule 86 (ato)


State 12

   87 cena: CENA •

    $default  reduce using rule 87 (cena)


State 13

    2 programa: programa bloco •
    4 bloco: bloco • instrucao

    FACA                shift, and go to state 3
    ENQUANTO_COMECO     shift, and go to state 4
    SE                  shift, and go to state 5
    ABRE_COLCHETES      shift, and go to state 6
    ABRE_PARENTESES     shift, and go to state 7
    TOKEN               shift, and go to state 8
    ADICIONAR_CENARIO   shift, and go to state 9
    SUBSTITUIR_CENARIO  shift, and go to state 10
    ATO                 shift, and go to state 11
    CENA                shift, and go to state 12

    FACA                [reduce using rule 2 (programa)]
    ENQUANTO_COMECO     [reduce using rule 2 (programa)]
    SE                  [reduce using rule 2 (programa)]
    ABRE_COLCHETES      [reduce using rule 2 (programa)]
    ABRE_PARENTESES     [reduce using rule 2 (programa)]
    TOKEN               [reduce using rule 2 (programa)]
    ADICIONAR_CENARIO   [reduce using rule 2 (programa)]
    SUBSTITUIR_CENARIO  [reduce using rule 2 (programa)]
    ATO                 [reduce using rule 2 (programa)]
    CENA                [reduce using rule 2 (programa)]
    $default            reduce using rule 2 (programa)

    instrucao                 go to state 50
    declaracaoCenario         go to state 15
    concatenarCenario         go to state 16
    substituiCenario          go to state 17
    trocarCenario             go to state 18
    declaracaoQuestionamento  go to state 19
    texto                     go to state 20
    palavra                   go to state 21
    declaracao                go to state 22
    declaracaoInicio          go to state 23
    personagensEntrando       go to state 24
    alteracaoElenco           go to state 25
    if_sentenca               go to state 26
    if_bloco                  go to state 27
    while                     go to state 28
    dialogo                   go to state 29
    inicioDialogo             go to state 30
    ato                       go to state 31
    cena                      go to state 32


State 14

    3 bloco: instrucao •

    $default  reduce using rule 3 (bloco)


State 15

    9 instrucao: declaracaoCenario •

    $default  reduce using rule 9 (instrucao)


State 16

   11 instrucao: concatenarCenario •

    $default  reduce using rule 11 (instrucao)


State 17

   12 instrucao: substituiCenario •

    $default  reduce using rule 12 (instrucao)


State 18

   13 instrucao: trocarCenario •

    $default  reduce using rule 13 (instrucao)


State 19

   10 instrucao: declaracaoQuestionamento •

    $default  reduce using rule 10 (instrucao)


State 20

   23 declaracaoQuestionamento: texto • INTERROGACAO NAO FIM
   24                         | texto • INTERROGACAO SIM FIM
   25                         | texto • INTERROGACAO
   27 texto: texto • NUMERO
   28      | texto • palavra
   38 declaracaoInicio: texto • VIRGULA
   39 personagensEntrando: texto •
   85 inicioDialogo: texto • INICIO

    INICIO        shift, and go to state 51
    INTERROGACAO  shift, and go to state 52
    VIRGULA       shift, and go to state 53
    TOKEN         shift, and go to state 8
    NUMERO        shift, and go to state 54

    VIRGULA   [reduce using rule 39 (personagensEntrando)]
    TOKEN     [reduce using rule 39 (personagensEntrando)]
    $default  reduce using rule 39 (personagensEntrando)

    palavra  go to state 55


State 21

   26 texto: palavra •

    $default  reduce using rule 26 (texto)


State 22

    8 instrucao: declaracao •

    $default  reduce using rule 8 (instrucao)


State 23

   37 declaracao: declaracaoInicio • texto FIM

    TOKEN  shift, and go to state 8

    texto    go to state 56
    palavra  go to state 21


State 24

   18 instrucao: personagensEntrando •
   40 personagensEntrando: personagensEntrando • VIRGULA texto
   41                    | personagensEntrando • E texto

    VIRGULA  shift, and go to state 57
    E        shift, and go to state 58

    $default  reduce using rule 18 (instrucao)


State 25

   14 instrucao: alteracaoElenco •

    $default  reduce using rule 14 (instrucao)


State 26

   15 instrucao: if_sentenca •

    $default  reduce using rule 15 (instrucao)


State 27

   16 instrucao: if_bloco •

    $default  reduce using rule 16 (instrucao)


State 28

   17 instrucao: while •

    $default  reduce using rule 17 (instrucao)


State 29

    7 instrucao: dialogo •

    $default  reduce using rule 7 (instrucao)


State 30

   22 trocarCenario: inicioDialogo • VOLTAR_CENARIO ARTIGO texto FIM
   76 dialogo: inicioDialogo • MOSTRAR_CENARIO
   77        | inicioDialogo • if_sentenca FIM
   78        | inicioDialogo • texto FIM
   79        | inicioDialogo • texto VIRGULA TU EH expressao FIM
   80        | inicioDialogo • texto VIRGULA TU EH adjetivos FIM
   81        | inicioDialogo • texto VIRGULA MOSTRA_VALOR FIM
   82        | inicioDialogo • texto VIRGULA LE_VALOR FIM
   83        | inicioDialogo • texto VIRGULA GUARDE texto INTERIOR FIM
   84        | inicioDialogo • texto VIRGULA LEMBRE texto FIM

    SE               shift, and go to state 59
    VOLTAR_CENARIO   shift, and go to state 60
    TOKEN            shift, and go to state 8
    MOSTRAR_CENARIO  shift, and go to state 61

    texto        go to state 62
    palavra      go to state 21
    if_sentenca  go to state 63


State 31

    5 instrucao: ato •

    $default  reduce using rule 5 (instrucao)


State 32

    6 instrucao: cena •

    $default  reduce using rule 6 (instrucao)


State 33

   69 while: FACA VIRGULA • texto INICIO $@3 bloco ENQUANTO_COMECO condicao VIRGULA texto FIM

    TOKEN  shift, and go to state 8

    texto    go to state 64
    palavra  go to state 21


State 34

   53 valor: EU •

    $default  reduce using rule 53 (valor)


State 35

   54 valor: VOCE •

    $default  reduce using rule 54 (valor)


State 36

   52 valor: TU • MESMO

    MESMO  shift, and go to state 65


State 37

   57 expressao: ARTIGO • SOMAR ENTRE valor E valor
   58          | ARTIGO • SUBTRAIR ENTRE valor E valor
   59          | ARTIGO • MULTIPLICAR ENTRE valor E valor
   60          | ARTIGO • DIVIDIR ENTRE valor E valor

    SOMAR        shift, and go to state 66
    SUBTRAIR     shift, and go to state 67
    DIVIDIR      shift, and go to state 68
    MULTIPLICAR  shift, and go to state 69


State 38

   51 valor: NUMERO •

    $default  reduce using rule 51 (valor)


State 39

   27 texto: texto • NUMERO
   28      | texto • palavra
   55 valor: texto •

    TOKEN   shift, and go to state 8
    NUMERO  shift, and go to state 54

    TOKEN     [reduce using rule 55 (valor)]
    $default  reduce using rule 55 (valor)

    palavra  go to state 55


State 40

   56 expressao: valor •

    $default  reduce using rule 56 (expressao)


State 41

   70 condicao: expressao • FOR MAIOR expressao
   71         | expressao • FOR MENOR expressao
   72         | expressao • FOR IGUAL expressao
   73         | expressao • NAO FOR MENOR expressao
   74         | expressao • NAO FOR MAIOR expressao
   75         | expressao • NAO FOR IGUAL expressao

    NAO  shift, and go to state 70
    FOR  shift, and go to state 71


State 42

   67 while: ENQUANTO_COMECO condicao • VIRGULA texto INICIO $@2 bloco texto ENQUANTO_FIM FIM

    VIRGULA  shift, and go to state 72


State 43

   61 if_sentenca: SE condicao • VIRGULA personagem SERA expressao
   62            | SE condicao • VIRGULA personagem IF_MOSTRA_VALOR
   63            | SE condicao • VIRGULA personagem IF_LE_VALOR
   65 if_bloco: SE condicao • VIRGULA texto INICIO $@1 bloco ENDIF

    VIRGULA  shift, and go to state 73


State 44

   46 alteracaoElenco: ABRE_COLCHETES SAEM • personagensSaindo FECHA_COLCHETES

    TOKEN  shift, and go to state 8

    texto              go to state 74
    palavra            go to state 21
    personagensSaindo  go to state 75


State 45

   45 alteracaoElenco: ABRE_COLCHETES ENTRAM • personagensEntrando FECHA_COLCHETES

    TOKEN  shift, and go to state 8

    texto                go to state 76
    palavra              go to state 21
    personagensEntrando  go to state 77


State 46

   47 alteracaoElenco: ABRE_COLCHETES TODOS • SAEM FECHA_COLCHETES

    SAEM  shift, and go to state 78


State 47

   19 declaracaoCenario: ABRE_PARENTESES texto • VIRGULA texto FECHA_PARENTESES
   27 texto: texto • NUMERO
   28      | texto • palavra

    VIRGULA  shift, and go to state 79
    TOKEN    shift, and go to state 8
    NUMERO   shift, and go to state 54

    palavra  go to state 55


State 48

   20 concatenarCenario: ADICIONAR_CENARIO INICIO • texto FIM

    TOKEN  shift, and go to state 8

    texto    go to state 80
    palavra  go to state 21


State 49

   21 substituiCenario: SUBSTITUIR_CENARIO texto • POR texto NO_CENARIO FIM
   27 texto: texto • NUMERO
   28      | texto • palavra

    TOKEN   shift, and go to state 8
    NUMERO  shift, and go to state 54
    POR     shift, and go to state 81

    palavra  go to state 55


State 50

    4 bloco: bloco instrucao •

    $default  reduce using rule 4 (bloco)


State 51

   85 inicioDialogo: texto INICIO •

    $default  reduce using rule 85 (inicioDialogo)


State 52

   23 declaracaoQuestionamento: texto INTERROGACAO • NAO FIM
   24                         | texto INTERROGACAO • SIM FIM
   25                         | texto INTERROGACAO •

    NAO  shift, and go to state 82
    SIM  shift, and go to state 83

    $default  reduce using rule 25 (declaracaoQuestionamento)


State 53

   38 declaracaoInicio: texto VIRGULA •

    $default  reduce using rule 38 (declaracaoInicio)


State 54

   27 texto: texto NUMERO •

    $default  reduce using rule 27 (texto)


State 55

   28 texto: texto palavra •

    $default  reduce using rule 28 (texto)


State 56

   27 texto: texto • NUMERO
   28      | texto • palavra
   37 declaracao: declaracaoInicio texto • FIM

    FIM     shift, and go to state 84
    TOKEN   shift, and go to state 8
    NUMERO  shift, and go to state 54

    palavra  go to state 55


State 57

   40 personagensEntrando: personagensEntrando VIRGULA • texto

    TOKEN  shift, and go to state 8

    texto    go to state 85
    palavra  go to state 21


State 58

   41 personagensEntrando: personagensEntrando E • texto

    TOKEN  shift, and go to state 8

    texto    go to state 86
    palavra  go to state 21


State 59

   61 if_sentenca: SE • condicao VIRGULA personagem SERA expressao
   62            | SE • condicao VIRGULA personagem IF_MOSTRA_VALOR
   63            | SE • condicao VIRGULA personagem IF_LE_VALOR

    EU      shift, and go to state 34
    VOCE    shift, and go to state 35
    TOKEN   shift, and go to state 8
    TU      shift, and go to state 36
    ARTIGO  shift, and go to state 37
    NUMERO  shift, and go to state 38

    texto      go to state 39
    palavra    go to state 21
    valor      go to state 40
    expressao  go to state 41
    condicao   go to state 87


State 60

   22 trocarCenario: inicioDialogo VOLTAR_CENARIO • ARTIGO texto FIM

    ARTIGO  shift, and go to state 88


State 61

   76 dialogo: inicioDialogo MOSTRAR_CENARIO •

    $default  reduce using rule 76 (dialogo)


State 62

   27 texto: texto • NUMERO
   28      | texto • palavra
   78 dialogo: inicioDialogo texto • FIM
   79        | inicioDialogo texto • VIRGULA TU EH expressao FIM
   80        | inicioDialogo texto • VIRGULA TU EH adjetivos FIM
   81        | inicioDialogo texto • VIRGULA MOSTRA_VALOR FIM
   82        | inicioDialogo texto • VIRGULA LE_VALOR FIM
   83        | inicioDialogo texto • VIRGULA GUARDE texto INTERIOR FIM
   84        | inicioDialogo texto • VIRGULA LEMBRE texto FIM

    FIM      shift, and go to state 89
    VIRGULA  shift, and go to state 90
    TOKEN    shift, and go to state 8
    NUMERO   shift, and go to state 54

    palavra  go to state 55


State 63

   77 dialogo: inicioDialogo if_sentenca • FIM

    FIM  shift, and go to state 91


State 64

   27 texto: texto • NUMERO
   28      | texto • palavra
   69 while: FACA VIRGULA texto • INICIO $@3 bloco ENQUANTO_COMECO condicao VIRGULA texto FIM

    INICIO  shift, and go to state 92
    TOKEN   shift, and go to state 8
    NUMERO  shift, and go to state 54

    palavra  go to state 55


State 65

   52 valor: TU MESMO •

    $default  reduce using rule 52 (valor)


State 66

   57 expressao: ARTIGO SOMAR • ENTRE valor E valor

    ENTRE  shift, and go to state 93


State 67

   58 expressao: ARTIGO SUBTRAIR • ENTRE valor E valor

    ENTRE  shift, and go to state 94


State 68

   60 expressao: ARTIGO DIVIDIR • ENTRE valor E valor

    ENTRE  shift, and go to state 95


State 69

   59 expressao: ARTIGO MULTIPLICAR • ENTRE valor E valor

    ENTRE  shift, and go to state 96


State 70

   73 condicao: expressao NAO • FOR MENOR expressao
   74         | expressao NAO • FOR MAIOR expressao
   75         | expressao NAO • FOR IGUAL expressao

    FOR  shift, and go to state 97


State 71

   70 condicao: expressao FOR • MAIOR expressao
   71         | expressao FOR • MENOR expressao
   72         | expressao FOR • IGUAL expressao

    MAIOR  shift, and go to state 98
    MENOR  shift, and go to state 99
    IGUAL  shift, and go to state 100


State 72

   67 while: ENQUANTO_COMECO condicao VIRGULA • texto INICIO $@2 bloco texto ENQUANTO_FIM FIM

    TOKEN  shift, and go to state 8

    texto    go to state 101
    palavra  go to state 21


State 73

   61 if_sentenca: SE condicao VIRGULA • personagem SERA expressao
   62            | SE condicao VIRGULA • personagem IF_MOSTRA_VALOR
   63            | SE condicao VIRGULA • personagem IF_LE_VALOR
   65 if_bloco: SE condicao VIRGULA • texto INICIO $@1 bloco ENDIF

    EU     shift, and go to state 102
    VOCE   shift, and go to state 103
    TOKEN  shift, and go to state 8

    texto       go to state 104
    palavra     go to state 21
    personagem  go to state 105


State 74

   27 texto: texto • NUMERO
   28      | texto • palavra
   42 personagensSaindo: texto •

    TOKEN   shift, and go to state 8
    NUMERO  shift, and go to state 54

    $default  reduce using rule 42 (personagensSaindo)

    palavra  go to state 55


State 75

   43 personagensSaindo: personagensSaindo • VIRGULA texto
   44                  | personagensSaindo • E texto
   46 alteracaoElenco: ABRE_COLCHETES SAEM personagensSaindo • FECHA_COLCHETES

    FECHA_COLCHETES  shift, and go to state 106
    VIRGULA          shift, and go to state 107
    E                shift, and go to state 108


State 76

   27 texto: texto • NUMERO
   28      | texto • palavra
   39 personagensEntrando: texto •

    TOKEN   shift, and go to state 8
    NUMERO  shift, and go to state 54

    $default  reduce using rule 39 (personagensEntrando)

    palavra  go to state 55


State 77

   40 personagensEntrando: personagensEntrando • VIRGULA texto
   41                    | personagensEntrando • E texto
   45 alteracaoElenco: ABRE_COLCHETES ENTRAM personagensEntrando • FECHA_COLCHETES

    FECHA_COLCHETES  shift, and go to state 109
    VIRGULA          shift, and go to state 57
    E                shift, and go to state 58


State 78

   47 alteracaoElenco: ABRE_COLCHETES TODOS SAEM • FECHA_COLCHETES

    FECHA_COLCHETES  shift, and go to state 110


State 79

   19 declaracaoCenario: ABRE_PARENTESES texto VIRGULA • texto FECHA_PARENTESES

    TOKEN  shift, and go to state 8

    texto    go to state 111
    palavra  go to state 21


State 80

   20 concatenarCenario: ADICIONAR_CENARIO INICIO texto • FIM
   27 texto: texto • NUMERO
   28      | texto • palavra

    FIM     shift, and go to state 112
    TOKEN   shift, and go to state 8
    NUMERO  shift, and go to state 54

    palavra  go to state 55


State 81

   21 substituiCenario: SUBSTITUIR_CENARIO texto POR • texto NO_CENARIO FIM

    TOKEN  shift, and go to state 8

    texto    go to state 113
    palavra  go to state 21


State 82

   23 declaracaoQuestionamento: texto INTERROGACAO NAO • FIM

    FIM  shift, and go to state 114


State 83

   24 declaracaoQuestionamento: texto INTERROGACAO SIM • FIM

    FIM  shift, and go to state 115


State 84

   37 declaracao: declaracaoInicio texto FIM •

    $default  reduce using rule 37 (declaracao)


State 85

   27 texto: texto • NUMERO
   28      | texto • palavra
   40 personagensEntrando: personagensEntrando VIRGULA texto •

    TOKEN   shift, and go to state 8
    NUMERO  shift, and go to state 54

    TOKEN     [reduce using rule 40 (personagensEntrando)]
    $default  reduce using rule 40 (personagensEntrando)

    palavra  go to state 55


State 86

   27 texto: texto • NUMERO
   28      | texto • palavra
   41 personagensEntrando: personagensEntrando E texto •

    TOKEN   shift, and go to state 8
    NUMERO  shift, and go to state 54

    TOKEN     [reduce using rule 41 (personagensEntrando)]
    $default  reduce using rule 41 (personagensEntrando)

    palavra  go to state 55


State 87

   61 if_sentenca: SE condicao • VIRGULA personagem SERA expressao
   62            | SE condicao • VIRGULA personagem IF_MOSTRA_VALOR
   63            | SE condicao • VIRGULA personagem IF_LE_VALOR

    VIRGULA  shift, and go to state 116


State 88

   22 trocarCenario: inicioDialogo VOLTAR_CENARIO ARTIGO • texto FIM

    TOKEN  shift, and go to state 8

    texto    go to state 117
    palavra  go to state 21


State 89

   78 dialogo: inicioDialogo texto FIM •

    $default  reduce using rule 78 (dialogo)


State 90

   79 dialogo: inicioDialogo texto VIRGULA • TU EH expressao FIM
   80        | inicioDialogo texto VIRGULA • TU EH adjetivos FIM
   81        | inicioDialogo texto VIRGULA • MOSTRA_VALOR FIM
   82        | inicioDialogo texto VIRGULA • LE_VALOR FIM
   83        | inicioDialogo texto VIRGULA • GUARDE texto INTERIOR FIM
   84        | inicioDialogo texto VIRGULA • LEMBRE texto FIM

    TU            shift, and go to state 118
    MOSTRA_VALOR  shift, and go to state 119
    LE_VALOR      shift, and go to state 120
    GUARDE        shift, and go to state 121
    LEMBRE        shift, and go to state 122


State 91

   77 dialogo: inicioDialogo if_sentenca FIM •

    $default  reduce using rule 77 (dialogo)


State 92

   69 while: FACA VIRGULA texto INICIO • $@3 bloco ENQUANTO_COMECO condicao VIRGULA texto FIM

    $default  reduce using rule 68 ($@3)

    $@3  go to state 123


State 93

   57 expressao: ARTIGO SOMAR ENTRE • valor E valor

    EU      shift, and go to state 34
    VOCE    shift, and go to state 35
    TOKEN   shift, and go to state 8
    TU      shift, and go to state 36
    NUMERO  shift, and go to state 38

    texto    go to state 39
    palavra  go to state 21
    valor    go to state 124


State 94

   58 expressao: ARTIGO SUBTRAIR ENTRE • valor E valor

    EU      shift, and go to state 34
    VOCE    shift, and go to state 35
    TOKEN   shift, and go to state 8
    TU      shift, and go to state 36
    NUMERO  shift, and go to state 38

    texto    go to state 39
    palavra  go to state 21
    valor    go to state 125


State 95

   60 expressao: ARTIGO DIVIDIR ENTRE • valor E valor

    EU      shift, and go to state 34
    VOCE    shift, and go to state 35
    TOKEN   shift, and go to state 8
    TU      shift, and go to state 36
    NUMERO  shift, and go to state 38

    texto    go to state 39
    palavra  go to state 21
    valor    go to state 126


State 96

   59 expressao: ARTIGO MULTIPLICAR ENTRE • valor E valor

    EU      shift, and go to state 34
    VOCE    shift, and go to state 35
    TOKEN   shift, and go to state 8
    TU      shift, and go to state 36
    NUMERO  shift, and go to state 38

    texto    go to state 39
    palavra  go to state 21
    valor    go to state 127


State 97

   73 condicao: expressao NAO FOR • MENOR expressao
   74         | expressao NAO FOR • MAIOR expressao
   75         | expressao NAO FOR • IGUAL expressao

    MAIOR  shift, and go to state 128
    MENOR  shift, and go to state 129
    IGUAL  shift, and go to state 130


State 98

   70 condicao: expressao FOR MAIOR • expressao

    EU      shift, and go to state 34
    VOCE    shift, and go to state 35
    TOKEN   shift, and go to state 8
    TU      shift, and go to state 36
    ARTIGO  shift, and go to state 37
    NUMERO  shift, and go to state 38

    texto      go to state 39
    palavra    go to state 21
    valor      go to state 40
    expressao  go to state 131


State 99

   71 condicao: expressao FOR MENOR • expressao
